Fixed the navigation wrapping issue
I feel like this was a little *too* easy, won't be surprised if it
breaks.

--- a/sites/all/themes/dvcacomega/css/dvcacomega-alpha-default.css
+++ b/sites/all/themes/dvcacomega/css/dvcacomega-alpha-default.css
@@ -4,6 +4,9 @@ a,
 a:link {
   text-decoration:none;
 }
+
+#block-menu-block-4 { float: left; }
+
 .zone-user-wrapper .menu .leaf a {
   display: block;
   line-height: 10em;
